--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.3",
     "image-webpack-loader": "^5.0.0",
+    "jquery": "^3.5.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
