--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http-server": "^0.12.3",
     "image-webpack-loader": "^5.0.0",
     "jquery": "^3.5.1",
+    "jssocials": "^1.5.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
